--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
 	},
 	"homepage": "https://github.com/rvdegroen/human-centered-design-2223#readme",
 	"dependencies": {
+		"canvas": "^2.11.2",
 		"ejs": "^3.1.9",
 		"express": "^4.18.2",
 		"socket.io": "^4.6.1"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.22"
+		"nodemon": "^2.0.22",
+		"sass": "^1.62.1"
 	}
 }
